k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: weatherapp-api-svc
  namespace: weatherapp
  labels:
    app: weatherapp-api # required for monitoring
spec:
  type: ClusterIP
  selector:
    app: weatherapp-api # must match the label on the Deployment's pods
  ports:
  - name: http
    port: 80
    targetPort: 8080
